# nrfx3rs

./: .gitmodules  Cargo.toml  build.rs  memory.x
.cargo/: config
crypto/: nrf_cc310_bl.h
src/: main.rs
src/cc310_bl/: mod.rs
src/fw_info/: mod.rs
src/serial/: mod.rs
